# NanoGPT

./: .gitignore  Makefile  README.md  pyproject.toml
src/byte_pair_encoding/: byte_pair_encoding.ipynb
src/gpt2/: attention.py  block.py  dataloader.py  gpt2_model.py  mlp.py  train_gpt2.py  trainer.py
src/gpt_2/: attention.py  block.py  dataloader.py  ddp.py  evaluator.py  fineweb_dataloader.py  gpt2_model.py  mlp.py  trainer.py
src/nanogpt/: dataset.py  nanogpt.py  train.py
