[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages=["src", "src/gpt2"]

[project]
name = "nanogpt"
version = "0.1.0"
description = "A PyTorch-based implementation of NanoGPT for training and inference."
authors = [
    { name = "Divyanshu Goyal", email = "divyanshu.g25@gmail.com" }
]
requires-python = ">=3.10"

dependencies = [
   "torch",
   "ipykernel",
   "transformers",
   "tiktoken>=0.9.0",
]

[dependency-groups]
dev = [
    "ruff",   # For linting and formatting
    "pytest", # For running tests
    "wandb",  # For experiment tracking,
    "black"
]

[tool.uv]
default-groups = ["dev"]
